# langchain-mana

./: .env.example  .gitignore  PACKAGING.md  PROJECT_OVERVIEW.md  README.md  README_NEW.md  README_PLATFORM.md  docker-compose.yml  pyproject.toml
app/: __init__.py  server.py
app/api/dependencies/: services.py
app/api/middlewares/: logging_middleware.py
app/api/routers/: __init__.py  chat_router.py  file_router.py  food_router.py  sync_router.py
app/api/schemas/: chat_schemas.py  file_schemas.py  food_schemas.py
app/application/: __init__.py
app/application/services/: agent_runtime.py  chat_service.py  file_service.py  food_recognition_service.py  model_router_service.py  rag_service.py  session_service.py  sync_service.py  tool_registry.py
app/core/: config.py  constants.py  exceptions.py  logging.py
app/domain/: __init__.py
app/domain/entities/: food.py  session.py
app/domain/repositories/: __init__.py  ingredient_repository.py  meal_repository.py  session_repository.py
app/infrastructure/: __init__.py
app/infrastructure/ai/: __init__.py
app/infrastructure/ai/chains/: food_extraction_chain.py  image_recognition_chain.py  nutritional_analysis_chain.py
app/infrastructure/ai/providers/: __init__.py  base.py  mock_provider.py  openai_provider.py  provider_registry.py  zhipu_provider.py
app/infrastructure/database/: session.py
app/infrastructure/database/models/: __init__.py  food_models.py  session_models.py
app/infrastructure/database/repositories/: __init__.py  ingredient_repository_impl.py  meal_repository_impl.py  session_repository_impl.py
app/infrastructure/vector_store/chroma/: manager.py
app/infrastructure/vector_store/embeddings/: embedding_factory.py
app/tasks/: __init__.py  worker.py
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/agents/: runtime.py
backend/app/api/v1/: __init__.py  agents.py  knowledge.py  models.py  tools.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: router.py
backend/app/rag/: pipeline.py
backend/app/rag/parsers/: base.py  text_parser.py
backend/app/schemas/: agent.py  knowledge.py
backend/app/storage/: chroma_db.py  models.py
backend/app/tools/: __init__.py  base.py
backend/app/tools/builtin/: calculator.py  weather.py
backend/app/utils/: logger.py
backend/tests/: test_agent_runtime.py  test_tools.py
docs/: DELIVERY_SUMMARY.md  QUICKSTART.md  architecture.md  需求文档和接口定义.md
docs/architecture/: SYSTEM_ARCHITECTURE.md
examples/: agent_example.py  food_recognition_example.py
scripts/: init_db.py  setup.sh  test_server.py
src/agent/: __init__.py  agent.py
src/agent/utils/: db_utils.py
tests/: test_basic.py
